kubernetes/bitwarden/overlays/okd/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app.kubernetes.io/instance: bitwarden
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - bitwarden.arthurvardevanyan.com
      secretName: bitwarden-cert
  rules:
    - host: bitwarden.arthurvardevanyan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitwarden
                port:
                  number: 80
